--- a/Facial_Emotion_Detection.ipynb
+++ b/Facial_Emotion_Detection.ipynb
@@ -6,7 +6,7 @@
       "name": "Facial Emotion Detection.ipynb",
       "provenance": [],
       "mount_file_id": "1s0mCeCVBer2J6vGNEzyoDfLVsokAFMOs",
-      "authorship_tag": "ABX9TyNA+1bVN7ZWWNmZhPiHguY4",
+      "authorship_tag": "ABX9TyP9HzQN6zqy/2ZQxGsdFcyQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,10 +107,74 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Defining te path of train and test dataset\n",
+        "train_dir = '/content/train'\n",
+        "test_dir = '/content/test'"
       ],
       "metadata": {
         "id": "4neUQW-4B9M6"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Data Augumentation and  Performing train test split \n",
+        "## NOTE keeping the dimensions of the image 48 X 48 pixels (Grayscale)\n",
+        "- Train Split\n",
+        "- Test Split"
+      ],
+      "metadata": {
+        "id": "LNUSLcdEETuo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Generating batches of tensor image data with real-time data augmentation.\n",
+        "batch = 64\n",
+        "img = (48,48)\n",
+        "train_gen = tf.keras.preprocessing.image.ImageDataGenerator(rotation_range=20, rescale=1./255, shear_range=0.1,\n",
+        "                                                            zoom_range=0.2, horizontal_flip=True, vertical_flip=True,\n",
+        "                                                            width_shift_range=0.1,  height_shift_range=0.1, \n",
+        "                                                            brightness_range=(0.2, 0.8))\n",
+        "\n",
+        "train_data = train_gen.flow_from_directory(train_dir, target_size=img, batch_size=batch, class_mode = \"categorical\",\n",
+        "                                           color_mode=\"grayscale\"\n",
+        "                                           )\n",
+        "\n",
+        "validation_gen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
+        "validation_data = validation_gen.flow_from_directory(test_dir, target_size=img, batch_size=batch*2, class_mode='categorical',\n",
+        "                                                     color_mode=\"grayscale\"\n",
+        "                                                     )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uYfTXsHAENX_",
+        "outputId": "aad7107c-584b-4563-bb40-67155e04bd05"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found 28709 images belonging to 7 classes.\n",
+            "Found 7178 images belonging to 7 classes.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "BM8WIcuMFH8i"
       },
       "execution_count": null,
       "outputs": []
