Added details about the data augumentation and data test train splitting

--- a/Facial_Emotion_Detection.ipynb
+++ b/Facial_Emotion_Detection.ipynb
@@ -5,8 +5,9 @@
     "colab": {
       "name": "Facial Emotion Detection.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1s0mCeCVBer2J6vGNEzyoDfLVsokAFMOs",
-      "authorship_tag": "ABX9TyP9HzQN6zqy/2ZQxGsdFcyQ",
+      "authorship_tag": "ABX9TyMU3gzv9jpvjYC17qUu9aH4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -120,10 +121,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Data Augumentation and  Performing train test split \n",
+        "# 1. Data Augumentation <br>\n",
+        "  ### a. Training set <br>\n",
+        "  - Image Rotation\n",
+        "  - Rescaling\n",
+        "  - Shear Image\n",
+        "  - Zooming the Image\n",
+        "  - Horizontal Flip\n",
+        "  - Increasing Brightness\n",
+        "\n",
+        "\n",
+        "  ### b. Testing set\n",
+        "   - Rescaling\n",
+        "\n",
+        "#2.Performing train test split \n",
         "## NOTE keeping the dimensions of the image 48 X 48 pixels (Grayscale)\n",
-        "- Train Split\n",
-        "- Test Split"
+        "- Train Split 27709\n",
+        "- Test Split  7178"
       ],
       "metadata": {
         "id": "LNUSLcdEETuo"
@@ -133,18 +147,26 @@
       "cell_type": "code",
       "source": [
         "# Generating batches of tensor image data with real-time data augmentation.\n",
+        "# setting the batch size for mini batch\n",
         "batch = 64\n",
+        "# setting the dimensions for image\n",
         "img = (48,48)\n",
+        "\n",
+        "\n",
+        "# Setting the Data Augumentation parameters for training data set \n",
         "train_gen = tf.keras.preprocessing.image.ImageDataGenerator(rotation_range=20, rescale=1./255, shear_range=0.1,\n",
-        "                                                            zoom_range=0.2, horizontal_flip=True, vertical_flip=True,\n",
-        "                                                            width_shift_range=0.1,  height_shift_range=0.1, \n",
+        "                                                            zoom_range=0.2, horizontal_flip=True,\n",
+        "                                                            \n",
         "                                                            brightness_range=(0.2, 0.8))\n",
         "\n",
+        "# Fetching the files from train directory and performing the data augumentation\n",
         "train_data = train_gen.flow_from_directory(train_dir, target_size=img, batch_size=batch, class_mode = \"categorical\",\n",
         "                                           color_mode=\"grayscale\"\n",
         "                                           )\n",
-        "\n",
+        "# Setting the Data Augumentation parameters for validation data set \n",
         "validation_gen = tf.keras.preprocessing.image.ImageDataGenerator(rescale=1./255)\n",
+        "\n",
+        "# Fetching the files from test directory and performing the data augumentation\n",
         "validation_data = validation_gen.flow_from_directory(test_dir, target_size=img, batch_size=batch*2, class_mode='categorical',\n",
         "                                                     color_mode=\"grayscale\"\n",
         "                                                     )"
@@ -154,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uYfTXsHAENX_",
-        "outputId": "aad7107c-584b-4563-bb40-67155e04bd05"
+        "outputId": "3ffa5bcf-cd84-446a-e278-89fed5a5101f"
       },
-      "execution_count": 8,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
